<resources>
    <string name="app_name">TransportApp</string>
    <string name="usuario">Usuario</string>
    <string name="vacio"></string>
    <string name="clientes">Clientes</string>
    <string name="cedula">Cedula</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="email">E-mail</string>
    <string name="infoVehiculo">Informacion del vehiculo</string>
    <string name="infoPago">Informacion de Pago</string>
    <string name="siguiente">Siguiente</string>
    <string name="nombrePropietario">Nombre de Propietario</string>
    <string name="matricula">Matricula</string>
    <string name="contrasenia">Contraseña</string>
    <string name="reescriba">Escriba nuevamente su contraseña</string>
    <string name="placa">Placa</string>
    <string name="modelo">Modelo</string>
    <string name="marca">Marca</string>
    <string name="color">Color</string>
    <string name="año">Año</string>
    <string name="añadirotro">Añadir otro vehiculo</string>
    <string name="ingresar">Ingresar</string>
    <string name="tipo">Tipo</string>
    <string name="codigoSeguridad">Codigo de seguridad(CVV)</string>
    <string name="fechavencimiento">Fecha de vencimiento(MM/AA)</string>
    <string name="numtarjeta">Numero de Tarjeta</string>
    <string name="titularTarjeta">Titular tarjeta</string>
    <string name="registrate">Registrate</string>
    <string name="SMsregistro">No tienes una cuenta?</string>
    <string name="contraseña">Contraseña</string>
    <string name="tamañovehiculo">Tamaño del Vehiculo:</string>
    <string name="seleccioneunchofer">Seleccione un Chofer:</string>
    <string name="aceptar">Aceptar:</string>
    <string name="transportista">Transportista:</string>
    <string name="solicitudServicio">Solicitud de servicio:</string>
    <string name="cancelar">Cancelar:</string>
    <string name="ruta">Ver Ruta</string>
    <string name="pago">Finalizar Pago</string>
    <string name="direccion">Direccion:</string>
    <string name="title_activity_ventana4">Map</string>
    <string name="title_activity_registro_usuarios">RegistroUsuarios</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menus">Menus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
