<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondo1"
    android:layout_height="match_parent"
    tools:context=".SolicitudServicio"
    android:id="@+id/contenedor">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="114dp"
        android:layout_height="40dp"
        android:background="@drawable/style_borde_text"
        android:text="@string/transportista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/txtTransportista"
        android:layout_width="259dp"
        android:background="@drawable/style_borde_text"
        android:layout_height="41dp"
        android:text="@string/vacio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/solicitudServicio"
        android:background="@drawable/style_borde_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTransportista"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="82dp"
        android:layout_height="41dp"
        android:text="@string/direccion"
        android:background="@drawable/style_borde_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/txtDireccion"
        android:layout_width="224dp"
        android:background="@drawable/style_borde_text"
        android:layout_height="41dp"
        android:text="@string/vacio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/btncancelar"
        android:layout_width="124dp"
        android:layout_height="55dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="regresar"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.482" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="108dp"
        android:layout_height="57dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="fina"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/btncancelar"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccion"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/btnTrazar"
        android:layout_width="108dp"
        android:layout_height="57dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="trazar"
        android:text="@string/ruta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDireccion"
        app:layout_constraintVertical_bias="0.237" />
</androidx.constraintlayout.widget.ConstraintLayout>